klee/tools/klee/grammar.output
Terminals unused in grammar

    SWITCH
    IMPORT
    AS
    DEFAULT
    CASE
    BEG_TAB
    END_TAB
    LIBRARY
    INTERFACE
    SEND
    CALL
    TRANSFER
    SPACE
    HEX
    MULTIPLY
    DOLLAR
    AMP
    NUMBER_LITERAL
    VERSION
    FIXED
    UFIXED
    TEXT
    COMMENT
    FROM


State 22 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 204 conflicts: 15 shift/reduce
State 229 conflicts: 2 shift/reduce
State 268 conflicts: 15 shift/reduce
State 269 conflicts: 15 shift/reduce
State 271 conflicts: 15 shift/reduce
State 327 conflicts: 1 shift/reduce
State 341 conflicts: 15 shift/reduce
State 362 conflicts: 37 shift/reduce
State 365 conflicts: 38 shift/reduce
State 383 conflicts: 37 shift/reduce
State 387 conflicts: 37 shift/reduce


Grammar

    0 $accept: SourceUnit $end

    1 $@1: %empty

    2 SourceUnit: ContractDefinition $@1 SourceUnit
    3           | ContractDefinition
    4           | PragmaDirective SourceUnit

    5 PragmaDirective: PRAGMA SOLIDITY SEMICOLON

    6 $@2: %empty

    7 ContractDefinition: CONTRACT IDENTIFIER L_CURLY_B $@2 ContractPart R_CURLY_B

    8 $@3: %empty

    9 ContractDefinition: CONTRACT IDENTIFIER IS BaseClass L_CURLY_B $@3 ContractPart R_CURLY_B

   10 BaseClass: IDENTIFIER
   11          | IDENTIFIER COMMA BaseClass

   12 ContractPart: StateVariableDeclaration ContractPart
   13             | FunctionDefinition ContractPart
   14             | UsingForDeclaration ContractPart
   15             | StructDefinition ContractPart
   16             | ModifierDefinition ContractPart
   17             | EventDefinition ContractPart
   18             | EnumDefinition ContractPart
   19             | %empty

   20 UsingForDeclaration: USING IDENTIFIER FOR STAR SEMICOLON
   21                    | USING IDENTIFIER FOR TypeName SEMICOLON

   22 StructDefinition: STRUCT IDENTIFIER L_CURLY_B Vars R_CURLY_B

   23 Vars: VariableDeclaration SEMICOLON Vars
   24     | VariableDeclaration SEMICOLON

   25 StorageLocation: MEMORY
   26                | STORAGE
   27                | CALLDATA

   28 ModifierDefinition: MODIFIER IDENTIFIER ParameterList Block
   29                   | MODIFIER IDENTIFIER Block

   30 ModifierInvocation: IDENTIFIER
   31                   | IDENTIFIER L_PAREN ExpressionList R_PAREN
   32                   | IDENTIFIER L_PAREN R_PAREN

   33 EventDefinition: EVENT IDENTIFIER EventParameterList ANONYMOUS SEMICOLON
   34                | EVENT IDENTIFIER EventParameterList SEMICOLON

   35 EventParameterList: L_PAREN EventParameter R_PAREN
   36                   | L_PAREN R_PAREN

   37 EventParameter: TypeName INDEXED IDENTIFIER COMMA EventParameter
   38               | TypeName INDEXED IDENTIFIER
   39               | TypeName IDENTIFIER COMMA EventParameter
   40               | TypeName IDENTIFIER
   41               | TypeName

   42 EnumValue: IDENTIFIER

   43 EnumDefinition: ENUM IDENTIFIER L_CURLY_B R_CURLY_B
   44               | ENUM IDENTIFIER L_CURLY_B EnumValue EnumValues R_CURLY_B

   45 EnumValues: COMMA EnumValue EnumValues
   46           | %empty

   47 StateVariableDeclaration: TypeName VariableAttribute IDENTIFIER SEMICOLON
   48                         | TypeName VariableAttribute IDENTIFIER EQUAL Expression SEMICOLON

   49 StateMutability: PURE
   50                | VIEW
   51                | PAYABLE

   52 Qualifier: PUBLIC
   53          | PRIVATE
   54          | CONSTANT
   55          | INTERNAL
   56          | EXTERNAL

   57 VariableAttribute: Qualifier VariableAttribute
   58                  | StateMutability VariableAttribute
   59                  | %empty

   60 FunctionAttribute: Qualifier FunctionAttribute
   61                  | StateMutability FunctionAttribute
   62                  | ModifierInvocation FunctionAttribute
   63                  | %empty

   64 FunctionDefinition: FUNCTION IDENTIFIER ParameterList FunctionAttribute RETURNS ReturnList Block
   65                   | FUNCTION IDENTIFIER ParameterList FunctionAttribute Block
   66                   | CONSTRUCTOR ParameterList FunctionAttribute Block
   67                   | FUNCTION L_PAREN R_PAREN FunctionAttribute Block

   68 ParameterList: L_PAREN Parameter R_PAREN

   69 $@4: %empty

   70 Parameter: TypeName IDENTIFIER COMMA $@4 Parameter
   71          | TypeName StorageLocation IDENTIFIER
   72          | TypeName IDENTIFIER
   73          | TypeName
   74          | %empty

   75 ReturnList: L_PAREN Parameter2 R_PAREN

   76 Parameter2: TypeName
   77           | TypeName IDENTIFIER
   78           | TypeName COMMA Parameter2
   79           | TypeName IDENTIFIER COMMA Parameter2

   80 VariableDeclaration: TypeName StorageLocation IDENTIFIER EQUAL Expression
   81                    | TypeName StorageLocation IDENTIFIER
   82                    | TypeName IDENTIFIER
   83                    | TypeName IDENTIFIER EQUAL Expression

   84 TypeName: ElementaryTypeName
   85         | Mapping
   86         | UserDefinedTypeName
   87         | ArrayTypeName
   88         | FunctionTypeName
   89         | ADDRESS PAYABLE

   90 UserDefinedTypeName: IDENTIFIER

   91 Mapping: MAPPING L_PAREN ElementaryTypeName IMPLIES TypeName R_PAREN

   92 ArrayTypeName: TypeName OPT_L OPT_R
   93              | TypeName OPT_L Expression OPT_R

   94 FunctionTypeName: FUNCTION ParameterList RETURNS ParameterList

   95 Block: L_CURLY_B Statement R_CURLY_B
   96      | SEMICOLON

   97 Statement: Statement IfStatement
   98          | Statement WhileStatement
   99          | Statement ForStatement
  100          | L_CURLY_B Statement R_CURLY_B
  101          | Statement SimpleStatement SEMICOLON
  102          | Statement DoWhileStatement SEMICOLON
  103          | Statement CONTINUE SEMICOLON
  104          | Statement BREAK SEMICOLON
  105          | Statement RETURN L_PAREN ExpressionList R_PAREN SEMICOLON
  106          | Statement RETURN Expression SEMICOLON
  107          | Statement RETURN SEMICOLON
  108          | Statement THROW SEMICOLON
  109          | Statement EmitStatement SEMICOLON
  110          | Statement UNDERSCORE
  111          | Statement UNDERSCORE SEMICOLON
  112          | Statement AssertStatement SEMICOLON
  113          | %empty

  114 AssertStatement: REQUIRE L_PAREN Expression R_PAREN
  115                | ASSERT L_PAREN Expression R_PAREN
  116                | REQUIRE L_PAREN Expression COMMA STRING_LITERAL R_PAREN
  117                | ASSERT L_PAREN Expression COMMA STRING_LITERAL R_PAREN

  118 ExpressionStatement: Expression

  119 IfStatement: IF L_PAREN Expression R_PAREN Statement
  120            | IF L_PAREN Expression R_PAREN Statement ELSE Statement

  121 WhileStatement: WHILE L_PAREN Expression R_PAREN Statement

  122 SimpleStatement: Expression
  123                | VariableDefinition

  124 ForStatement: FOR L_PAREN SimpleStatement SEMICOLON Expression SEMICOLON ExpressionStatement R_PAREN Statement

  125 DoWhileStatement: DO Statement WHILE L_PAREN Expression R_PAREN

  126 EmitStatement: EMIT FunctionCall

  127 VariableDefinition: VariableDeclaration
  128                   | L_PAREN VariableDeclaration VarDec2 R_PAREN EQUAL Expression
  129                   | L_PAREN VarDec2 R_PAREN

  130 VarDec2: COMMA VariableDeclaration
  131        | %empty

  132 Expression: Expression Unary1
  133           | NewExpression
  134           | IndexAccess
  135           | FunctionCall
  136           | MemberAccess
  137           | OPT_L ExpressionList OPT_R
  138           | L_PAREN Expression R_PAREN
  139           | Unary2 Expression
  140           | Expression LOG_OP Expression
  141           | Expression QUES_MARK Expression COLON Expression
  142           | Expression Operator Expression
  143           | Expression REL_OP Expression
  144           | PrimaryExpression

  145 Operator: EQUAL
  146         | PLUS
  147         | MINUS
  148         | DIVIDE
  149         | STAR
  150         | MOD
  151         | EQUAL2
  152         | CARET

  153 Unary1: PLUS2
  154       | MINUS2

  155 Unary2: PLUS2
  156       | PLUS
  157       | MINUS
  158       | TILDE
  159       | DELETE
  160       | MINUS2
  161       | NOT

  162 PrimaryExpression: BooleanLiteral
  163                  | NumberLiteral
  164                  | STRING_LITERAL
  165                  | IDENTIFIER
  166                  | ElementaryTypeName

  167 ExpressionList: Expression
  168               | Expression COMMA ExpressionList

  169 NameValue: COMMA IDENTIFIER COLON Expression NameValue
  170          | %empty

  171 NameValueList: IDENTIFIER COLON Expression NameValue

  172 FunctionCallArguments: L_CURLY_B NameValueList R_CURLY_B
  173                      | L_CURLY_B R_CURLY_B
  174                      | ExpressionList

  175 FunctionCall: Expression L_PAREN FunctionCallArguments R_PAREN
  176             | Expression L_PAREN R_PAREN

  177 NewExpression: NEW TypeName

  178 MemberAccess: Expression DOT IDENTIFIER
  179             | IDENTIFIER DOT IDENTIFIER
  180             | IDENTIFIER DOT IndexAccess
  181             | Expression DOT IndexAccess

  182 IndexAccess: IDENTIFIER OPT_L Expression OPT_R IndexAccess2
  183            | IDENTIFIER OPT_L OPT_R

  184 IndexAccess2: OPT_L Expression OPT_R
  185             | OPT_L OPT_R
  186             | %empty

  187 BooleanLiteral: TRUE
  188               | FALSE

  189 NumberLiteral: HEX_NUMBER
  190              | DECIMAL_NUMBER
  191              | HEX_NUMBER NumberUnit
  192              | DECIMAL_NUMBER NumberUnit

  193 NumberUnit: WEI
  194           | SZABO
  195           | FINNEY
  196           | ETHER
  197           | SECONDS
  198           | MINUTES
  199           | HOURS
  200           | DAYS
  201           | WEEKS
  202           | YEARS

  203 ElementaryTypeName: ADDRESS
  204                   | BOOL
  205                   | STRING
  206                   | INT
  207                   | UINT
  208                   | BYTE
  209                   | AUTO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENUM <var> (258) 43 44
    STRUCT <var> (259) 22
    WHILE <var> (260) 121 125
    DO <var> (261) 125
    FOR <var> (262) 20 21 124
    IF <var> (263) 119 120
    CONTINUE <var> (264) 103
    BREAK <var> (265) 104
    RETURN <var> (266) 105 106 107
    SWITCH <var> (267)
    IMPORT <var> (268)
    CONTRACT <var> (269) 7 9
    AS <var> (270)
    PUBLIC <var> (271) 52
    PRIVATE <var> (272) 53
    FUNCTION <var> (273) 64 65 67 94
    INTERNAL <var> (274) 55
    CONSTANT <var> (275) 54
    DEFAULT <var> (276)
    CASE <var> (277)
    BEG_TAB <var> (278)
    END_TAB <var> (279)
    L_CURLY_B <var> (280) 7 9 22 43 44 95 100 172 173
    R_CURLY_B <var> (281) 7 9 22 43 44 95 100 172 173
    PRAGMA <var> (282) 5
    LIBRARY <var> (283)
    INTERFACE <var> (284)
    MODIFIER <var> (285) 28 29
    IS <var> (286) 9
    MEMORY <var> (287) 25
    STORAGE <var> (288) 26
    CALLDATA <var> (289) 27
    SEND <var> (290)
    CALL <var> (291)
    TRANSFER <var> (292)
    ADDRESS <var> (293) 89 203
    DOT <var> (294) 178 179 180 181
    BOOL <var> (295) 204
    OPT_L <var> (296) 92 93 137 182 183 184 185
    OPT_R <var> (297) 92 93 137 182 183 184 185
    SPACE <var> (298)
    BYTE <var> (299) 208
    HEX <var> (300)
    PURE <var> (301) 49
    VIEW <var> (302) 50
    PAYABLE <var> (303) 51 89
    MAPPING <var> (304) 91
    IMPLIES <var> (305) 91
    HEX_NUMBER <var> (306) 189 191
    STRING_LITERAL <var> (307) 116 117 164
    PLUS <var> (308) 146 156
    MULTIPLY <var> (309)
    EQUAL <var> (310) 48 80 83 128 145
    EQUAL2 <var> (311) 151
    PLUS2 <var> (312) 153 155
    MINUS2 <var> (313) 154 160
    L_PAREN <var> (314) 31 32 35 36 67 68 75 91 105 114 115 116 117 119 120 121 124 125 128 129 138 175 176
    DOLLAR <var> (315)
    AMP <var> (316)
    CARET <var> (317) 152
    MOD <var> (318) 150
    NUMBER_LITERAL <var> (319)
    IDENTIFIER <var> (320) 7 9 10 11 20 21 22 28 29 30 31 32 33 34 37 38 39 40 42 43 44 47 48 64 65 70 71 72 77 79 80 81 82 83 90 165 169 171 178 179 180 182 183
    DECIMAL_NUMBER <var> (321) 190 192
    REL_OP <var> (322) 143
    LOG_OP <var> (323) 140
    QUES_MARK <var> (324) 141
    COLON <var> (325) 141 169 171
    EMIT <var> (326) 126
    UINT <var> (327) 207
    SOLIDITY <var> (328) 5
    VERSION <var> (329)
    EVENT <var> (330) 33 34
    INDEXED <var> (331) 37 38
    FINNEY <var> (332) 195
    ETHER <var> (333) 196
    SECONDS <var> (334) 197
    MINUTES <var> (335) 198
    HOURS <var> (336) 199
    DAYS <var> (337) 200
    WEEKS <var> (338) 201
    YEARS <var> (339) 202
    UNDERSCORE <var> (340) 110 111
    ANONYMOUS <var> (341) 33
    USING <var> (342) 20 21
    NOT <var> (343) 161
    FIXED <var> (344)
    UFIXED <var> (345)
    R_PAREN <var> (346) 31 32 35 36 67 68 75 91 105 114 115 116 117 119 120 121 124 125 128 129 138 175 176
    COMMA <var> (347) 11 37 39 45 70 78 79 116 117 130 168 169
    STAR <var> (348) 20 149
    TRUE <var> (349) 187
    FALSE <var> (350) 188
    TEXT <var> (351)
    CONSTRUCTOR <var> (352) 66
    DELETE <var> (353) 159
    REQUIRE <var> (354) 114 116
    ASSERT <var> (355) 115 117
    AUTO <var> (356) 209
    ELSE <var> (357) 120
    THROW <var> (358) 108
    EXTERNAL <var> (359) 56
    RETURNS <var> (360) 64 94
    COMMENT <var> (361)
    STRING <var> (362) 205
    INT <var> (363) 206
    NEW <var> (364) 177
    FROM <var> (365)
    MINUS <var> (366) 147 157
    DIVIDE <var> (367) 148
    WEI <var> (368) 193
    SZABO <var> (369) 194
    TILDE <var> (370) 158
    SEMICOLON <var> (371) 5 20 21 23 24 33 34 47 48 96 101 102 103 104 105 106 107 108 109 111 112 124


Nonterminals, with rules where they appear

    $accept (117)
        on left: 0
    SourceUnit <var> (118)
        on left: 2 3 4
        on right: 0 2 4
    $@1 (119)
        on left: 1
        on right: 2
    PragmaDirective (120)
        on left: 5
        on right: 4
    ContractDefinition <var> (121)
        on left: 7 9
        on right: 2 3
    $@2 (122)
        on left: 6
        on right: 7
    $@3 (123)
        on left: 8
        on right: 9
    BaseClass <var> (124)
        on left: 10 11
        on right: 9 11
    ContractPart <var> (125)
        on left: 12 13 14 15 16 17 18 19
        on right: 7 9 12 13 14 15 16 17 18
    UsingForDeclaration <var> (126)
        on left: 20 21
        on right: 14
    StructDefinition <var> (127)
        on left: 22
        on right: 15
    Vars <var> (128)
        on left: 23 24
        on right: 22 23
    StorageLocation <var> (129)
        on left: 25 26 27
        on right: 71 80 81
    ModifierDefinition <var> (130)
        on left: 28 29
        on right: 16
    ModifierInvocation <var> (131)
        on left: 30 31 32
        on right: 62
    EventDefinition <var> (132)
        on left: 33 34
        on right: 17
    EventParameterList <var> (133)
        on left: 35 36
        on right: 33 34
    EventParameter <var> (134)
        on left: 37 38 39 40 41
        on right: 35 37 39
    EnumValue <var> (135)
        on left: 42
        on right: 44 45
    EnumDefinition <var> (136)
        on left: 43 44
        on right: 18
    EnumValues <var> (137)
        on left: 45 46
        on right: 44 45
    StateVariableDeclaration <var> (138)
        on left: 47 48
        on right: 12
    StateMutability <var> (139)
        on left: 49 50 51
        on right: 58 61
    Qualifier <var> (140)
        on left: 52 53 54 55 56
        on right: 57 60
    VariableAttribute <var> (141)
        on left: 57 58 59
        on right: 47 48 57 58
    FunctionAttribute <var> (142)
        on left: 60 61 62 63
        on right: 60 61 62 64 65 66 67
    FunctionDefinition <var> (143)
        on left: 64 65 66 67
        on right: 13
    ParameterList <var> (144)
        on left: 68
        on right: 28 64 65 66 94
    Parameter <var> (145)
        on left: 70 71 72 73 74
        on right: 68 70
    $@4 (146)
        on left: 69
        on right: 70
    ReturnList <var> (147)
        on left: 75
        on right: 64
    Parameter2 <var> (148)
        on left: 76 77 78 79
        on right: 75 78 79
    VariableDeclaration <var> (149)
        on left: 80 81 82 83
        on right: 23 24 127 128 130
    TypeName <var> (150)
        on left: 84 85 86 87 88 89
        on right: 21 37 38 39 40 41 47 48 70 71 72 73 76 77 78 79 80 81 82 83 91 92 93 177
    UserDefinedTypeName <var> (151)
        on left: 90
        on right: 86
    Mapping <var> (152)
        on left: 91
        on right: 85
    ArrayTypeName <var> (153)
        on left: 92 93
        on right: 87
    FunctionTypeName <var> (154)
        on left: 94
        on right: 88
    Block <var> (155)
        on left: 95 96
        on right: 28 29 64 65 66 67
    Statement <var> (156)
        on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 95 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 119 120 121 124 125
    AssertStatement <var> (157)
        on left: 114 115 116 117
        on right: 112
    ExpressionStatement <var> (158)
        on left: 118
        on right: 124
    IfStatement <var> (159)
        on left: 119 120
        on right: 97
    WhileStatement <var> (160)
        on left: 121
        on right: 98
    SimpleStatement <var> (161)
        on left: 122 123
        on right: 101 124
    ForStatement <var> (162)
        on left: 124
        on right: 99
    DoWhileStatement <var> (163)
        on left: 125
        on right: 102
    EmitStatement <var> (164)
        on left: 126
        on right: 109
    VariableDefinition <var> (165)
        on left: 127 128 129
        on right: 123
    VarDec2 <var> (166)
        on left: 130 131
        on right: 128 129
    Expression <var> (167)
        on left: 132 133 134 135 136 137 138 139 140 141 142 143 144
        on right: 48 80 83 93 106 114 115 116 117 118 119 120 121 122 124 125 128 132 138 139 140 141 142 143 167 168 169 171 175 176 178 181 182 184
    Operator <var> (168)
        on left: 145 146 147 148 149 150 151 152
        on right: 142
    Unary1 <var> (169)
        on left: 153 154
        on right: 132
    Unary2 <var> (170)
        on left: 155 156 157 158 159 160 161
        on right: 139
    PrimaryExpression <var> (171)
        on left: 162 163 164 165 166
        on right: 144
    ExpressionList <var> (172)
        on left: 167 168
        on right: 31 105 137 168 174
    NameValue <var> (173)
        on left: 169 170
        on right: 169 171
    NameValueList <var> (174)
        on left: 171
        on right: 172
    FunctionCallArguments <var> (175)
        on left: 172 173 174
        on right: 175
    FunctionCall <var> (176)
        on left: 175 176
        on right: 126 135
    NewExpression <var> (177)
        on left: 177
        on right: 133
    MemberAccess <var> (178)
        on left: 178 179 180 181
        on right: 136
    IndexAccess <var> (179)
        on left: 182 183
        on right: 134 180 181
    IndexAccess2 <var> (180)
        on left: 184 185 186
        on right: 182
    BooleanLiteral <var> (181)
        on left: 187 188
        on right: 162
    NumberLiteral <var> (182)
        on left: 189 190 191 192
        on right: 163
    NumberUnit <var> (183)
        on left: 193 194 195 196 197 198 199 200 201 202
        on right: 191 192
    ElementaryTypeName <var> (184)
        on left: 203 204 205 206 207 208 209
        on right: 84 91 166


State 0

    0 $accept: • SourceUnit $end

    CONTRACT  shift, and go to state 1
    PRAGMA    shift, and go to state 2

    SourceUnit          go to state 3
    PragmaDirective     go to state 4
    ContractDefinition  go to state 5


State 1

    7 ContractDefinition: CONTRACT • IDENTIFIER L_CURLY_B $@2 ContractPart R_CURLY_B
    9                   | CONTRACT • IDENTIFIER IS BaseClass L_CURLY_B $@3 ContractPart R_CURLY_B

    IDENTIFIER  shift, and go to state 6


State 2

    5 PragmaDirective: PRAGMA • SOLIDITY SEMICOLON

    SOLIDITY  shift, and go to state 7


State 3

    0 $accept: SourceUnit • $end

    $end  shift, and go to state 8


State 4

    4 SourceUnit: PragmaDirective • SourceUnit

    CONTRACT  shift, and go to state 1
    PRAGMA    shift, and go to state 2

    SourceUnit          go to state 9
    PragmaDirective     go to state 4
    ContractDefinition  go to state 5


State 5

    2 SourceUnit: ContractDefinition • $@1 SourceUnit
    3           | ContractDefinition •

    $end      reduce using rule 3 (SourceUnit)
    $default  reduce using rule 1 ($@1)

    $@1  go to state 10


State 6

    7 ContractDefinition: CONTRACT IDENTIFIER • L_CURLY_B $@2 ContractPart R_CURLY_B
    9                   | CONTRACT IDENTIFIER • IS BaseClass L_CURLY_B $@3 ContractPart R_CURLY_B

    L_CURLY_B  shift, and go to state 11
    IS         shift, and go to state 12


State 7

    5 PragmaDirective: PRAGMA SOLIDITY • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    0 $accept: SourceUnit $end •

    $default  accept


State 9

    4 SourceUnit: PragmaDirective SourceUnit •

    $default  reduce using rule 4 (SourceUnit)


State 10

    2 SourceUnit: ContractDefinition $@1 • SourceUnit

    CONTRACT  shift, and go to state 1
    PRAGMA    shift, and go to state 2

    SourceUnit          go to state 14
    PragmaDirective     go to state 4
    ContractDefinition  go to state 5


State 11

    7 ContractDefinition: CONTRACT IDENTIFIER L_CURLY_B • $@2 ContractPart R_CURLY_B

    $default  reduce using rule 6 ($@2)

    $@2  go to state 15


State 12

    9 ContractDefinition: CONTRACT IDENTIFIER IS • BaseClass L_CURLY_B $@3 ContractPart R_CURLY_B

    IDENTIFIER  shift, and go to state 16

    BaseClass  go to state 17


State 13

    5 PragmaDirective: PRAGMA SOLIDITY SEMICOLON •

    $default  reduce using rule 5 (PragmaDirective)


State 14

    2 SourceUnit: ContractDefinition $@1 SourceUnit •

    $default  reduce using rule 2 (SourceUnit)


State 15

    7 ContractDefinition: CONTRACT IDENTIFIER L_CURLY_B $@2 • ContractPart R_CURLY_B

    ENUM         shift, and go to state 18
    STRUCT       shift, and go to state 19
    FUNCTION     shift, and go to state 20
    MODIFIER     shift, and go to state 21
    ADDRESS      shift, and go to state 22
    BOOL         shift, and go to state 23
    BYTE         shift, and go to state 24
    MAPPING      shift, and go to state 25
    IDENTIFIER   shift, and go to state 26
    UINT         shift, and go to state 27
    EVENT        shift, and go to state 28
    USING        shift, and go to state 29
    CONSTRUCTOR  shift, and go to state 30
    AUTO         shift, and go to state 31
    STRING       shift, and go to state 32
    INT          shift, and go to state 33

    $default  reduce using rule 19 (ContractPart)

    ContractPart              go to state 34
    UsingForDeclaration       go to state 35
    StructDefinition          go to state 36
    ModifierDefinition        go to state 37
    EventDefinition           go to state 38
    EnumDefinition            go to state 39
    StateVariableDeclaration  go to state 40
    FunctionDefinition        go to state 41
    TypeName                  go to state 42
    UserDefinedTypeName       go to state 43
    Mapping                   go to state 44
    ArrayTypeName             go to state 45
    FunctionTypeName          go to state 46
    ElementaryTypeName        go to state 47


State 16

   10 BaseClass: IDENTIFIER •
   11          | IDENTIFIER • COMMA BaseClass

    COMMA  shift, and go to state 48

    $default  reduce using rule 10 (BaseClass)


State 17

    9 ContractDefinition: CONTRACT IDENTIFIER IS BaseClass • L_CURLY_B $@3 ContractPart R_CURLY_B

    L_CURLY_B  shift, and go to state 49


State 18

   43 EnumDefinition: ENUM • IDENTIFIER L_CURLY_B R_CURLY_B
   44               | ENUM • IDENTIFIER L_CURLY_B EnumValue EnumValues R_CURLY_B

    IDENTIFIER  shift, and go to state 50


State 19

   22 StructDefinition: STRUCT • IDENTIFIER L_CURLY_B Vars R_CURLY_B

    IDENTIFIER  shift, and go to state 51


State 20

   64 FunctionDefinition: FUNCTION • IDENTIFIER ParameterList FunctionAttribute RETURNS ReturnList Block
   65                   | FUNCTION • IDENTIFIER ParameterList FunctionAttribute Block
   67                   | FUNCTION • L_PAREN R_PAREN FunctionAttribute Block
   94 FunctionTypeName: FUNCTION • ParameterList RETURNS ParameterList

    L_PAREN     shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    ParameterList  go to state 54


State 21

   28 ModifierDefinition: MODIFIER • IDENTIFIER ParameterList Block
   29                   | MODIFIER • IDENTIFIER Block

    IDENTIFIER  shift, and go to state 55


State 22

   89 TypeName: ADDRESS • PAYABLE
  203 ElementaryTypeName: ADDRESS •

    PAYABLE  shift, and go to state 56

    PAYABLE   [reduce using rule 203 (ElementaryTypeName)]
    $default  reduce using rule 203 (ElementaryTypeName)


State 23

  204 ElementaryTypeName: BOOL •

    $default  reduce using rule 204 (ElementaryTypeName)


State 24

  208 ElementaryTypeName: BYTE •

    $default  reduce using rule 208 (ElementaryTypeName)


State 25

   91 Mapping: MAPPING • L_PAREN ElementaryTypeName IMPLIES TypeName R_PAREN

    L_PAREN  shift, and go to state 57


State 26

   90 UserDefinedTypeName: IDENTIFIER •

    $default  reduce using rule 90 (UserDefinedTypeName)


State 27

  207 ElementaryTypeName: UINT •

    $default  reduce using rule 207 (ElementaryTypeName)


State 28

   33 EventDefinition: EVENT • IDENTIFIER EventParameterList ANONYMOUS SEMICOLON
   34                | EVENT • IDENTIFIER EventParameterList SEMICOLON

    IDENTIFIER  shift, and go to state 58


State 29

   20 UsingForDeclaration: USING • IDENTIFIER FOR STAR SEMICOLON
   21                    | USING • IDENTIFIER FOR TypeName SEMICOLON

    IDENTIFIER  shift, and go to state 59


State 30

   66 FunctionDefinition: CONSTRUCTOR • ParameterList FunctionAttribute Block

    L_PAREN  shift, and go to state 60

    ParameterList  go to state 61


State 31

  209 ElementaryTypeName: AUTO •

    $default  reduce using rule 209 (ElementaryTypeName)


State 32

  205 ElementaryTypeName: STRING •

    $default  reduce using rule 205 (ElementaryTypeName)


State 33

  206 ElementaryTypeName: INT •

    $default  reduce using rule 206 (ElementaryTypeName)


State 34

    7 ContractDefinition: CONTRACT IDENTIFIER L_CURLY_B $@2 ContractPart • R_CURLY_B

    R_CURLY_B  shift, and go to state 62


State 35

   14 ContractPart: UsingForDeclaration • ContractPart

    ENUM         shift, and go to state 18
    STRUCT       shift, and go to state 19
    FUNCTION     shift, and go to state 20
    MODIFIER     shift, and go to state 21
    ADDRESS      shift, and go to state 22
    BOOL         shift, and go to state 23
    BYTE         shift, and go to state 24
    MAPPING      shift, and go to state 25
    IDENTIFIER   shift, and go to state 26
    UINT         shift, and go to state 27
    EVENT        shift, and go to state 28
    USING        shift, and go to state 29
    CONSTRUCTOR  shift, and go to state 30
    AUTO         shift, and go to state 31
    STRING       shift, and go to state 32
    INT          shift, and go to state 33

    $default  reduce using rule 19 (ContractPart)

    ContractPart              go to state 63
    UsingForDeclaration       go to state 35
    StructDefinition          go to state 36
    ModifierDefinition        go to state 37
    EventDefinition           go to state 38
    EnumDefinition            go to state 39
    StateVariableDeclaration  go to state 40
    FunctionDefinition        go to state 41
    TypeName                  go to state 42
    UserDefinedTypeName       go to state 43
    Mapping                   go to state 44
    ArrayTypeName             go to state 45
    FunctionTypeName          go to state 46
    ElementaryTypeName        go to state 47


State 36

   15 ContractPart: StructDefinition • ContractPart

    ENUM         shift, and go to state 18
    STRUCT       shift, and go to state 19
    FUNCTION     shift, and go to state 20
    MODIFIER     shift, and go to state 21
    ADDRESS      shift, and go to state 22
    BOOL         shift, and go to state 23
    BYTE         shift, and go to state 24
    MAPPING      shift, and go to state 25
    IDENTIFIER   shift, and go to state 26
    UINT         shift, and go to state 27
    EVENT        shift, and go to state 28
    USING        shift, and go to state 29
    CONSTRUCTOR  shift, and go to state 30
    AUTO         shift, and go to state 31
    STRING       shift, and go to state 32
    INT          shift, and go to state 33

    $default  reduce using rule 19 (ContractPart)

    ContractPart              go to state 64
    UsingForDeclaration       go to state 35
    StructDefinition          go to state 36
    ModifierDefinition        go to state 37
    EventDefinition           go to state 38
    EnumDefinition            go to state 39
    StateVariableDeclaration  go to state 40
    FunctionDefinition        go to state 41
    TypeName                  go to state 42
    UserDefinedTypeName       go to state 43
    Mapping                   go to state 44
    ArrayTypeName             go to state 45
    FunctionTypeName          go to state 46
    ElementaryTypeName        go to state 47


State 37

   16 ContractPart: ModifierDefinition • ContractPart

    ENUM         shift, and go to state 18
    STRUCT       shift, and go to state 19
    FUNCTION     shift, and go to state 20
    MODIFIER     shift, and go to state 21
    ADDRESS      shift, and go to state 22
    BOOL         shift, and go to state 23
    BYTE         shift, and go to state 24
    MAPPING      shift, and go to state 25
    IDENTIFIER   shift, and go to state 26
    UINT         shift, and go to state 27
    EVENT        shift, and go to state 28
    USING        shift, and go to state 29
    CONSTRUCTOR  shift, and go to state 30
    AUTO         shift, and go to state 31
    STRING       shift, and go to state 32
    INT          shift, and go to state 33

    $default  reduce using rule 19 (ContractPart)

    ContractPart              go to state 65
    UsingForDeclaration       go to state 35
    StructDefinition          go to state 36
    ModifierDefinition        go to state 37
    EventDefinition           go to state 38
    EnumDefinition            go to state 39
    StateVariableDeclaration  go to state 40
    FunctionDefinition        go to state 41
    TypeName                  go to state 42
    UserDefinedTypeName       go to state 43
    Mapping                   go to state 44
    ArrayTypeName             go to state 45
    FunctionTypeName          go to state 46
    ElementaryTypeName        go to state 47


State 38

   17 ContractPart: EventDefinition • ContractPart

    ENUM         shift, and go to state 18
    STRUCT       shift, and go to state 19
    FUNCTION     shift, and go to state 20
    MODIFIER     shift, and go to state 21
    ADDRESS      shift, and go to state 22
    BOOL         shift, and go to state 23
    BYTE         shift, and go to state 24
    MAPPING      shift, and go to state 25
    IDENTIFIER   shift, and go to state 26
    UINT         shift, and go to state 27
    EVENT        shift, and go to state 28
    USING        shift, and go to state 29
    CONSTRUCTOR  shift, and go to state 30
    AUTO         shift, and go to state 31
    STRING       shift, and go to state 32
    INT          shift, and go to state 33

    $default  reduce using rule 19 (ContractPart)

    ContractPart              go to state 66
    UsingForDeclaration       go to state 35
    StructDefinition          go to state 36
    ModifierDefinition        go to state 37
    EventDefinition           go to state 38
    EnumDefinition            go to state 39
    StateVariableDeclaration  go to state 40
    FunctionDefinition        go to state 41
    TypeName                  go to state 42
    UserDefinedTypeName       go to state 43
    Mapping                   go to state 44
    ArrayTypeName             go to state 45
    FunctionTypeName          go to state 46
    ElementaryTypeName        go to state 47


State 39

   18 ContractPart: EnumDefinition • ContractPart

    ENUM         shift, and go to state 18
    STRUCT       shift, and go to state 19
    FUNCTION     shift, and go to state 20
    MODIFIER     shift, and go to state 21
    ADDRESS      shift, and go to state 22
    BOOL         shift, and go to state 23
    BYTE         shift, and go to state 24
    MAPPING      shift, and go to state 25
    IDENTIFIER   shift, and go to state 26
    UINT         shift, and go to state 27
    EVENT        shift, and go to state 28
    USING        shift, and go to state 29
    CONSTRUCTOR  shift, and go to state 30
    AUTO         shift, and go to state 31
    STRING       shift, and go to state 32
    INT          shift, and go to state 33

    $default  reduce using rule 19 (ContractPart)
